--- a/main.html
+++ b/main.html
@@ -4,13 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<button  type="button" class="btn btn-primary">Button-1</button>
+	<button type="button" class="btn btn-outline-secondary">Button-2</button>
+	<button type="button" class="btn btn-success btn-lg">Button-3</button>
+	<button type="button" class="btn btn-danger btn-sm">Button-4</button>
+      <button class="btn btn-warning btn-block" type="button">Button-5</button>
+		<button type="button" class="btn btn-info">Button-6</button>
+	<button type="button" class="btn btn-light">Button-7</button>
+	<button type="button" class="btn btn-link">Link</button>
 </body>
 
 </html>
