--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<button  type="button" class="btn btn-primary">Button-1</button>
-	<button type="button" class="btn btn-outline-secondary">Button-2</button>
-	<button type="button" class="btn btn-success btn-lg">Button-3</button>
-	<button type="button" class="btn btn-danger btn-sm">Button-4</button>
-      <button class="btn btn-warning btn-block" type="button">Button-5</button>
-		<button type="button" class="btn btn-info">Button-6</button>
-	<button type="button" class="btn btn-light">Button-7</button>
-	<button type="button" class="btn btn-link">Link</button>
+	<button id="button-1" type="button" class="btn btn-primary">Button-1</button>
+	<button id="button-2" type="button" class="btn btn-outline-secondary">Button-2</button>
+	<button id="button-3" type="button" class="btn btn-success btn-lg">Button-3</button>
+	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button-4</button>
+      <button id="button-5" class="btn btn-warning btn-block" type="button">Button-5</button>
+		<button id="button-6" type="button" class="btn btn-info">Button-6</button>
+	<button id="button-7" type="button" class="btn btn-light">Button-7</button>
+	<button id="button-8" type="button" class="btn btn-link">Link</button>
 </body>
 
 </html>
